<resources>
    <string name="app_name">Catalogue</string>
    <string name="action_settings">Settings</string>

    <string name="price_text">Price</string>
    <string name="quantity_text">Quantity</string>
    <string name="category_text">Category</string>
    <string name="subcategory_text">Sub-category</string>
    <string name="add_image_text">Add image</string>
    <string name="description_text">Description</string>

    <string name="take_photo_text">Open Camera</string>
    <string name="select_from_gallery_text">Select from gallery</string>
    <string name="select_photo_dialog__title_text">Select Photo</string>
    <string name="device_not_supported_text">Device not supported</string>
</resources>
